# stm

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-rpm.yml
completions/: stm-completion.sh
rpm/: stm.spec
scripts/: Makefile  fnv  fnv.c
src/: add.c  add.h  cmd.c  cmd.h  creds.c  creds.h  dump.c  dump.h  init.c  init.h  list.c  list.h  load.c  load.h  server.c  server.h  stm.c  stm.h
src/libstm/: CMakeLists.txt  compress.c  compress.h  config.h  db.c  db.h  error.c  error.h  export.h  file.c  file.h  formatter.c  formatter.h  init.c  init.h  queries.h  sec.c  sec.h  ssh.c  ssh.h  sysuser.c  sysuser.h  utils.c  utils.h
src/subcommands/: add.c  del.c  del.h  list.c  list.h  server.c  server.h  ssh.c
src/subcommands/creds/: kill.c  kill.h  status.c  status.h  store.c  store.h
src/subcommands/server/: add.c  add.h  del.c  find.c  find.h  info.c  info.h  list.c  ssh.c  ssh.h
src/subcommands/server/info/: get.c  get.h
